# ccindex

./: .gitattributes  .gitignore  LICENSE  README.md  bench_code_queries.py  bench_models.py  bench_results.md  export_bge_small.py  export_minilm.py  pyproject.toml
docs/superpowers/plans/: 2026-06-03-ccindex-implementation.md
docs/superpowers/specs/: 2026-06-03-ccindex-design.md
models/jina-code-onnx/: config.json  merges.txt  vocab.json
scripts/: download_models.py
src/ccindex/: chunker.py  cli.py  config.py  daemon.py  git.py  index.py  indexer.py  models.py  retrieval.py  walker.py
src/ccindex/agents/: __init__.py  antigravity.py  base.py  claude_code.py  gemini_cli.py
tests/: conftest.py  test_agents.py  test_chunker.py  test_cli.py  test_config.py  test_git.py  test_index.py  test_indexer.py  test_models.py  test_retrieval.py  test_walker.py
