[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccindex"
version = "0.1.0"
description = "Local offline-first code indexing and semantic search for AI coding agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "onnxruntime>=1.17",
    "tokenizers>=0.19",
    "sqlite-vec>=0.1.6",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.22",
    "tree-sitter-javascript>=0.22",
    "tree-sitter-typescript>=0.22",
    "tree-sitter-go>=0.22",
    "tree-sitter-rust>=0.22",
    "tree-sitter-java>=0.22",
    "tree-sitter-c>=0.22",
    "tree-sitter-cpp>=0.22",
    "tree-sitter-ruby>=0.22",
    "rich>=13.0",
    "watchdog>=4.0",
    "pathspec>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ccindex = "ccindex.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccindex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
